--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -3,4 +3,7 @@ databaseChangeLog:
   - include:
       file: db/changelog/changes/0001-init-schema.yaml
       relativeToChangelogFile: false
+  - include:
+      file: db/changelog/changes/0002-seed-users.yaml
+      relativeToChangelogFile: false
 
